2006-12-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, doc/doxygen_html.cfg.in, doc/Makefile.am,
	itpp/base/newton_search.cpp, itpp/base/newton_search.h,
	itpp/base/sources.mk, itpp/itbase.h, itpp/itoptim.h,
	itpp/Makefile.am, itpp/optim, itpp/optim/Makefile.am,
	itpp/optim/newton_search.cpp, itpp/optim/newton_search.h,
	itpp/optim/sources.mk, itpp/sources.mk, tests/Makefile.am,
	tests/newton_search_test.cpp: Created a new "Numerical
	Optimizations" module ("optim") and moved there the Newton Search
	algorithm sources from the base module.

2006-12-13  Conrad Sanderson  <conrad_s@users.sourceforge.net>

	* itpp/itbase.h, itpp/base/mat.h, itpp/base/vec.h:
	Small changes to the documentation to allow the
	vector and matrix classes to be visible from the
	Modules section (helps new users)

2006-12-12  Conrad Sanderson  <conrad_s@users.sourceforge.net>

	* itpp/base/vec.h, itpp/base/vec.cpp: Added vector versions
	of elem_mult_inplace(), elem_mult_out(), elem_div_out(), 
	elem_mult_sum() and elem_div_sum().
	See the 2006-12-07 entry by Conrad for more information.

2006-12-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/signal/transforms.cpp, itpp/signal/transforms.h: Minor
	documentation fixes.

2006-12-07  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/base/gf2mat.h, itpp/base/svec.h, itpp/base/smat.h:
	documentation update

	* itpp/base/svec.h: minor fix in + operator
	
2006-12-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, itpp/base/converters.cpp, itpp/base/converters.h,
	itpp/base/elmatfunc.cpp, itpp/base/elmatfunc.h,
	itpp/base/errorfunc.cpp, itpp/base/errorfunc.h,
	itpp/base/itmisc.h, itpp/base/operators.h, itpp/config_msvc.h:
	Added some missing function checks to configure.ac, which should
	improve the portability of the library on various platforms.

	* itpp/comm/channel.cpp, tests/channel_test.ref: Fixed a bug that
	resulted in different output samples of the IFFT fading generator