@@ -5,6 +5,7 @@ h_signal_sources = \
 	$(top_srcdir)/itpp/signal/freq_filt.h \
 	$(top_srcdir)/itpp/signal/poly.h \
 	$(top_srcdir)/itpp/signal/sigfun.h \
+	$(top_srcdir)/itpp/signal/source.h \
 	$(top_srcdir)/itpp/signal/transforms.h \
 	$(top_srcdir)/itpp/signal/window.h
 
@@ -15,5 +16,6 @@ cpp_signal_sources = \
 	$(top_srcdir)/itpp/signal/freq_filt.cpp \
 	$(top_srcdir)/itpp/signal/poly.cpp \
 	$(top_srcdir)/itpp/signal/sigfun.cpp \
+	$(top_srcdir)/itpp/signal/source.cpp \
 	$(top_srcdir)/itpp/signal/transforms.cpp \
 	$(top_srcdir)/itpp/signal/window.cpp
